files-view: Add support for hidden template files

Currently, hidden files are filtered out when looking for template files.
However, it would be nice to have a way to create hidden files from templates.
Let's offer hidden files as templates, but only when hidden files are shown.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/issues/1320